--- a/styles/base.css
+++ b/styles/base.css
@@ -278,7 +278,7 @@ nav .active {
 .card-content {
     overflow: hidden;
     max-width: 100%;
-    padding: 10px; /* Padding for the card content */
+    padding: 20px; /* Padding for the card content */
     box-sizing: border-box;
 }
 
@@ -356,6 +356,15 @@ main h1 {
 .map iframe {
     width: 100%;
     height: 400px; 
+}
+
+hr {
+    border: none; /* Remove Normalize.css influence */
+    height: 2px; /* Set desired thickness */
+    background-color: #000; /* Set a visible color */
+    width: 100%; /* Ensure it spans the container */
+    margin: 20px 0; /* Add spacing */
+    
 }
 
 #forecast-container {
