--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -50,11 +50,15 @@ header {
 
 
 .home-events img {
-    max-width: 100%; /* Allows the image to scale down as needed */
-    height: auto; /* Maintains aspect ratio */
-    flex: 1; /* Gives the image flexible space */
+    max-width: 100%;
+    height: auto;
+    flex: 1;
     transition: width 0.5s ease, max-width 0.5s ease;
+    display: block; /* Ensures the img is treated as a block element */
+    margin: 0 auto; /* Centers the image horizontally */
+    padding-right: 15px;
 }
+
 
 
 
@@ -890,7 +894,6 @@ body.join main.form button:hover {
 
     
     .card-content {
-        padding: 20px; /* Padding for the card content */
         background-color: var(--background-color-light);
     }
 
@@ -898,7 +901,6 @@ body.join main.form button:hover {
     /* Set attributes for the paragraphs. These will change once they become dynamic */
     .card-content p {
         font-size: .9rem;
-        padding: 5px;
         text-align: center;
         font-weight: bold;
         transition: font-size 0.5s ease;
@@ -1366,7 +1368,7 @@ body.join main.form button:hover {
     .row1 .card:first-child {
         flex-grow: 2; /* Allow Card 1 to take up more space */
         width: 100%;
-        
+        padding-bottom: 1rem;
         box-sizing: border-box;
     }
     
@@ -1578,7 +1580,7 @@ body.join main.form button:hover {
         text-align: center; /* Center-align text */
         vertical-align: middle; /* Vertically center-align text */
         padding: 10px; /* Add padding inside the cells */
-        border: 1px solid #ccc; /* Add a border for clarity */
+        border: 1px solid #000000; /* Add a border for clarity */
         font-size: 16px; /* Adjust font size */
     }
     
@@ -1630,7 +1632,7 @@ body.join main.form button:hover {
 
     .card-content p {
         font-size: 1.25rem;
-        padding: 10px;
+        padding: 3px;
         text-align: center;
         font-weight: bold;
         transition: font-size 0.5s ease;
